[package]
name = "feldspar"
version = "0.1.0"
authors = ["Matt Barson <matt.barson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adafruit_gps = "0.3.4"
rppal = "0.11.3"
clap = "2.33.0"

[profile.release]
codegen-units = 1