[package]
name = "feldspar"
version = "0.1.0"
authors = ["Matt Barson <matt.barson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adafruit_gps = "0.3.5"
rppal = "0.11.3"
clap = "2.33.0"
linux-embedded-hal = "0.2.0"
mpu9250 = "0.22.2"
embedded-hal = "0.2.3"
imu = { name = "imu", path = "../imu/" }

[profile.release]
codegen-units = 1